syntax = "proto3";

package telemetry.message.event;

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.telemetry.event";

enum ActionTypeProto {
    ACTIVATE = 0;
    DEACTIVATE = 1;
    INVERSE = 2;
    SET_VALUE = 3;
}