syntax = "proto3";

package telemetry.message.event;

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.telemetry.event";

import "telemetry/message/condition_type.proto";
import "telemetry/message/condition_operation.proto";

message ScenarioCondition {
  string sensor_id = 1;
  ConditionType type = 2;
  ConditionOperation operation = 3;
  oneof value {
    bool bool_value = 4;
    int32 int_value = 5;
  }
}